[package]
name = "huffman"
version = "0.1.0"
edition = "2021"
authors = ["Edgar <git@edgarluque.com>"]
description = "Huffman compression and decompression"
repository = "https://github.com/edg-l/rustyman/"
license = "MIT OR Apache-2.0"
keywords = ["huffman", "compression", "decompression", "lossless", "huffman-coding"]
categories = ["compression", "algorithms"]
documentation = "https://docs.rs/rustyman"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
