[package]
name = "rustyman"
version = "0.2.2"
edition = "2021"
authors = ["Edgar <git@edgarluque.com>"]
description = "Huffman compression and decompression"
repository = "https://github.com/edg-l/rustyman/"
license = "MIT OR Apache-2.0"
keywords = ["huffman", "compression", "decompression", "lossless", "huffman-coding"]
categories = ["compression", "algorithms"]
documentation = "https://docs.rs/rustyman"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benchmark"
harness = false

[dependencies]
bit-vec = "0.6.3"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
proptest = "1.0.0"
